Add wrapping <tr> & <td> with styling

--- a/packages/common/components/elements/list-header.marko
+++ b/packages/common/components/elements/list-header.marko
@@ -1,19 +1,21 @@
-<table align="center" class="row section-title" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; width: 100%; position: relative; display: block; margin: 0; background:#e31e30; padding: 0;  margin: 0 0 2px 0;" bgcolor="#e31e30;">
-  <tbody>
-    <tr style="padding: 0;" align="left">
-      <td class="text-pad" style="border-collapse: collapse !important;  margin: 0; padding: 5px 10px;" align="left" valign="top">
-        <span style="display: block; color: #ffffff!important; font-weight: bold; font-family: 'Arial', 'Helvetica', sans-serif; font-size: 18px; line-height: 20px; word-break: normal !important; word-wrap: normal !important; text-transform: uppercase;">
-          ${input.title}
-        </span>
-      </td>
-      <td class="expander" style="border-collapse: collapse !important;  visibility: hidden; width: 0px; padding: 0;"></td>
-    </tr>
-  </tbody>
-</table>
-<table>
-  <tbody>
-    <tr>
-      <td style="width: 100%;line-height: 5px;"></td>
-    </tr>
-  </tbody>
-</table>
+<tr>
+  <td style="padding:10px;background-color:rgba(0,0,0,0);border-color:#000;border-width:1px;border-style:none;background-position:50% 50%;background-size:cover;border-radius:0">
+    <table align="center" class="row section-title" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; width: 100%; position: relative; display: block; margin: 0; background:#e31e30; padding: 0;  margin: 0 0 2px 0;" bgcolor="#e31e30;">
+      <tbody>
+        <tr style="padding: 0;" align="left">
+          <td class="text-pad" style="border-collapse: collapse !important;  margin: 0; padding: 5px 10px;" align="left" valign="top">
+            <span style="display: block; color: #ffffff!important; font-weight: bold; font-family: 'Arial', 'Helvetica', sans-serif; font-size: 18px; line-height: 20px; word-break: normal !important; word-wrap: normal !important; text-transform: uppercase;">
+              ${input.title}
+            </span>
+          </td>
+          <td class="expander" style="border-collapse: collapse !important;  visibility: hidden; width: 0px; padding: 0;"></td>
+        </tr>
+      </tbody>
+    </table>
+    <!-- <table>
+      <tbody>
+        <common-table-spacer-element height=5 />
+      </tbody>
+    </table> -->
+  </td>
+</tr>
