Remove ‘Fintech for Advisers’

--- a/packages/common/components/blocks/content/list-item.marko
+++ b/packages/common/components/blocks/content/list-item.marko
@@ -39,7 +39,7 @@ $ const sponsoredTagStyle = {
           <table align="center" class="row news-item" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; position: relative; display: block; padding: 5px 0 0 0; border-top: 0px solid rgba(255,255,255,0) !important;">
             <tbody>
 
-              <if(sectionName === 'Main' || 'Fintech for Advisers')>
+              <if(sectionName === 'Main')>
                 <common-content-main-block
                   content=content
                   continue-reading=continueReading
