Adjust layout & add ‘Sponsored’ section

--- a/packages/common/components/layouts/daily.marko
+++ b/packages/common/components/layouts/daily.marko
@@ -31,6 +31,31 @@ $ const newsletterConfig = config.get(newsletter.alias);
       date=date
       section-name="Main"
       continue-reading=true
+      limit=3
+    />
+
+    <common-content-list-block
+      data=data
+      newsletter=newsletter
+      date=date
+      section-name="Sponsored"
+      continue-reading=true
+      limit=1
+    />
+
+    <common-ad-lower-banner-ad-block
+      data=data
+      newsletter=newsletter
+      date=date
+    />
+
+    <common-content-list-block
+      data=data
+      newsletter=newsletter
+      date=date
+      section-name="Main"
+      continue-reading=true
+      skip=3
       limit=10
     />
 
@@ -40,12 +65,6 @@ $ const newsletterConfig = config.get(newsletter.alias);
       date=date
       section-name="Podcast"
       continue-reading=true
-    />
-
-    <common-ad-lower-banner-ad-block
-      data=data
-      newsletter=newsletter
-      date=date
     />
 
     </@body>
