--- a/packages/common/components/blocks/content/list-item.marko
+++ b/packages/common/components/blocks/content/list-item.marko
@@ -39,23 +39,24 @@ $ const sponsoredTagStyle = {
           <table align="center" class="row news-item" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; width: 100%; position: relative; display: block; padding: 5px 0 0 0; border-top: 0px solid rgba(255,255,255,0) !important;">
             <tbody>
 
-              <if(sectionName === 'Main' || 'Sponsored')>
-                <common-content-main-block
+              <if(sectionName === "Podcast")>
+                <common-content-podcast-block
                   content=content
-                  continue-reading=continueReading
                   url-params=urlParams
                   content-url=contentUrl
+                  section-name=sectionName
                 />
               </if>
 
-              <if(sectionName === 'Podcast')>
-                <common-content-podcast-block
+              <else>
+                <common-content-main-block
                   content=content
-                  continue-reading=continueReading
                   url-params=urlParams
                   content-url=contentUrl
+                  section-name=sectionName
                 />
-              </if>
+              </else>
+
 
             </tbody>
           </table>
